--- a/elasticstack/docker-compose.yml
+++ b/elasticstack/docker-compose.yml
@@ -6,6 +6,8 @@ services:
     ports:
       - 9200:9200
       - 9300:9300
+    environment:
+      ES_JAVA_OPTS: "-Xms750m -Xmx750m"
     ulimits:
       memlock:
         soft: -1
