--- a/elasticstack/logstash.conf
+++ b/elasticstack/logstash.conf
@@ -12,7 +12,7 @@ input {
 
 output {
   elasticsearch {
-    hosts => "localhost:9200"
+    hosts => "elasticsearch:9200"
     manage_template => false
     index => "%{[@metadata][beat]}-%{[@metadata][version]}-%{+YYYY.MM.dd}"
   }
