--- a/noframework/project/composer.json
+++ b/noframework/project/composer.json
@@ -1,7 +1,8 @@
 {
     "require": {
         "symfony/http-foundation": "^4.2",
-        "symfony/http-kernel": "^4.2"
+        "symfony/http-kernel": "^4.2",
+        "symfony/routing": "^4.2"
     },
     "autoload": {
         "psr-4": {
