--- a/patrick_noframework/default.conf
+++ b/patrick_noframework/default.conf
@@ -1,6 +1,6 @@
 server {
     server_name localhost;
-    root /project/web;
+    root /project/public;
 
     location / {
         # try to serve file directly, fallback to index.php
