--- a/patrick_noframework/project/composer.json
+++ b/patrick_noframework/project/composer.json
@@ -3,7 +3,8 @@
     "type": "project",
     "require": {
         "symfony/http-foundation": "^4.2",
-        "tracy/tracy": "^2.5"
+        "tracy/tracy": "^2.5",
+        "nikic/fast-route": "^1.3"
     },
     "authors": [
         {
