--- a/patrick_noframework/project/composer.json
+++ b/patrick_noframework/project/composer.json
@@ -5,7 +5,8 @@
         "symfony/http-foundation": "^4.2",
         "tracy/tracy": "^2.5",
         "nikic/fast-route": "^1.3",
-        "twig/twig": "^2.6"
+        "twig/twig": "^2.6",
+        "rdlowrey/auryn": "^1.4"
     },
     "authors": [
         {
