--- a/elasticstack/docker-compose.yml
+++ b/elasticstack/docker-compose.yml
@@ -8,12 +8,21 @@ services:
       - cluster.name=docker-cluster
       - bootstrap.memory_lock=true
       - "ES_JAVA_OPTS=-Xms1g -Xmx1g"
+    volumes:
+      - esdata1:/usr/share/elasticsearch/data
     ulimits:
       memlock:
         soft: -1
         hard: -1
     ports:
       - 9200:9200
+    healthcheck:
+      test: /
+  create_template:
+    build:
+      context: ./images/create_template
+    links:
+      - elasticsearch
   logstash:
     image: logstash:6.5.4
     ports:
