--- a/patrick_noframework/project/composer.json
+++ b/patrick_noframework/project/composer.json
@@ -6,7 +6,8 @@
         "tracy/tracy": "^2.5",
         "nikic/fast-route": "^1.3",
         "twig/twig": "^2.6",
-        "rdlowrey/auryn": "^1.4"
+        "rdlowrey/auryn": "^1.4",
+        "doctrine/dbal": "^2.9"
     },
     "authors": [
         {
@@ -16,7 +17,8 @@
     ],
     "autoload": {
         "psr-4": {
-            "SocialNews\\": "src/"
+            "SocialNews\\": "src/",
+            "Migrations\\": "migrations/"
         }
     }
 }
