--- a/elasticstack/images/create_index_pattern/Dockerfile
+++ b/elasticstack/images/create_index_pattern/Dockerfile
@@ -6,4 +6,4 @@ COPY create_index_pattern.sh /usr/local/bin/
 
 RUN ["chmod", "+x", "/usr/local/bin/create_index_pattern.sh"]
 
-ENTRYPOINT ["/usr/local/bin/create_index_pattern.sh"]
+ENTRYPOINT ["sh", "/usr/local/bin/create_index_pattern.sh"]
