--- a/patrick_noframework/project/composer.json
+++ b/patrick_noframework/project/composer.json
@@ -7,7 +7,8 @@
         "nikic/fast-route": "^1.3",
         "twig/twig": "^2.6",
         "rdlowrey/auryn": "^1.4",
-        "doctrine/dbal": "^2.9"
+        "doctrine/dbal": "^2.9",
+        "ramsey/uuid": "^3.8"
     },
     "authors": [
         {
