--- a/patrick_noframework/project/composer.json
+++ b/patrick_noframework/project/composer.json
@@ -2,6 +2,7 @@
     "name": "f1r3starter/noframework",
     "type": "project",
     "require": {
+        "ext-readline": "*",
         "symfony/http-foundation": "^4.2",
         "tracy/tracy": "^2.5",
         "nikic/fast-route": "^1.3",
