--- a/elasticstack/docker-compose.yml
+++ b/elasticstack/docker-compose.yml
@@ -2,9 +2,10 @@ version: '3.3'
 
 services:
   elasticsearch:
-    image: docker.elastic.co/elasticsearch/elasticsearch:6.5.4
+    image: docker.elastic.co/elasticsearch/elasticsearch:7.0.0
     container_name: elasticsearch
     environment:
+      - discovery.type=single-node
       - cluster.name=docker-cluster
       - bootstrap.memory_lock=true
       - "ES_JAVA_OPTS=-Xms1g -Xmx1g"
@@ -24,7 +25,7 @@ services:
     networks:
       - elasticstacknet
   logstash:
-    image: logstash:6.5.4
+    image: logstash:7.0.0
     ports:
       - 5044:5044
     volumes:
@@ -32,14 +33,14 @@ services:
     networks:
       - elasticstacknet
   kibana:
-    image: kibana:6.5.4
+    image: kibana:7.0.0
     hostname: kibana
     ports:
       - 5601:5601
     networks:
       - elasticstacknet
   filebeat:
-    image: docker.elastic.co/beats/filebeat:6.5.4
+    image: docker.elastic.co/beats/filebeat:7.0.0
     container_name: filebeat
     user: root
     volumes:
