--- a/eaa/connection_pool/composer.json
+++ b/eaa/connection_pool/composer.json
@@ -10,5 +10,8 @@
         "psr-4": {
             "App\\" : "src/"
         }
+    },
+    "require": {
+        "react/event-loop": "^1.1"
     }
 }
