add reactphp socket

--- a/eaa/connection_pool/composer.json
+++ b/eaa/connection_pool/composer.json
@@ -12,6 +12,7 @@
         }
     },
     "require": {
-        "react/event-loop": "^1.1"
+        "react/event-loop": "^1.1",
+        "react/socket": "^1.2"
     }
 }
