--- a/eaa/connection_pool/composer.json
+++ b/eaa/connection_pool/composer.json
@@ -13,6 +13,7 @@
     },
     "require": {
         "react/event-loop": "^1.1",
-        "react/socket": "^1.2"
+        "react/socket": "^1.2",
+        "react/http": "^0.8.4"
     }
 }
