--- a/eaa/connection_pool/composer.json
+++ b/eaa/connection_pool/composer.json
@@ -14,6 +14,7 @@
     "require": {
         "react/event-loop": "^1.1",
         "react/socket": "^1.2",
-        "react/http": "^0.8.4"
+        "react/http": "^0.8.4",
+        "react/mysql": "^0.5.3"
     }
 }
