--- a/serializer/composer.json
+++ b/serializer/composer.json
@@ -1,6 +1,7 @@
 {
     "require": {
         "symfony/serializer": "^5.0",
-        "jms/serializer": "^3.3"
+        "jms/serializer": "^3.3",
+        "symfony/property-access": "^5.0"
     }
 }
