--- a/phpunit/composer.json
+++ b/phpunit/composer.json
@@ -1,6 +1,7 @@
 {
     "require": {
-        "phpunit/phpunit": "^7.4"
+      "phpunit/phpunit": "^7.4",
+      "ext-pdo": "*"
     },
     "autoload": {
         "psr-4": {
